in_progress/Tutorial-BaikalETK-new.ipynb: fixes in the driver C codegen

--- a/in_progress/Tutorial-BaikalETK-new.ipynb
+++ b/in_progress/Tutorial-BaikalETK-new.ipynb
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -798,59 +798,36 @@
       "Generating symbolic expressions for BSSN RHSs...\n",
       "Generating symbolic expressions for BSSN RHSs...\n",
       "Generating symbolic expressions for BSSN RHSs...\n",
-      "Finished BSSN symbolic expressions in 2.67402720451355 seconds.\n",
-      "Generating C code for BSSN RHSs (FD_order=6,Tmunu=False) in Cartesian coordinates.\n",
-      "Finished BSSN symbolic expressions in 2.789640426635742 seconds.\n",
-      "Generating C code for BSSN RHSs (FD_order=8,Tmunu=False) in Cartesian coordinates.\n",
-      "Finished BSSN symbolic expressions in 2.913094997406006 seconds.\n",
+      "Finished BSSN symbolic expressions in 2.5221993923187256 seconds.\n",
       "Generating C code for BSSN RHSs (FD_order=4,Tmunu=False) in Cartesian coordinates.\n",
-      "Finished BSSN symbolic expressions in 3.089233875274658 seconds.\n",
+      "Finished BSSN symbolic expressions in 2.53625750541687 seconds.\n",
+      "Finished BSSN symbolic expressions in 2.606637954711914 seconds.\n",
       "Generating C code for Ricci tensor (FD_order=4) in Cartesian coordinates.\n",
-      "Finished BSSN symbolic expressions in 4.616913318634033 seconds.\n",
+      "Generating C code for BSSN RHSs (FD_order=8,Tmunu=False) in Cartesian coordinates.\n",
+      "Finished BSSN symbolic expressions in 2.654423236846924 seconds.\n",
+      "Generating C code for BSSN RHSs (FD_order=6,Tmunu=False) in Cartesian coordinates.\n",
+      "Finished BSSN symbolic expressions in 4.189503908157349 seconds.\n",
       "Generating C code for BSSN RHSs (FD_order=4,Tmunu=True) in Cartesian coordinates.\n",
-      "Finished BSSN symbolic expressions in 4.940196990966797 seconds.\n",
+      "Finished BSSN symbolic expressions in 4.223048210144043 seconds.\n",
       "Generating C code for Ricci tensor (FD_order=4) in Cartesian coordinates.\n",
-      "Finished BSSN symbolic expressions in 5.01026177406311 seconds.\n",
-      "Generating C code for BSSN RHSs (FD_order=2,Tmunu=True) in Cartesian coordinates.\n",
-      "Finished BSSN symbolic expressions in 5.4461047649383545 seconds.\n",
+      "Finished BSSN symbolic expressions in 4.283332347869873 seconds.\n",
       "Generating C code for Ricci tensor (FD_order=2) in Cartesian coordinates.\n",
-      "Finished Ricci C codegen (FD_order=2) in 17.344371557235718 seconds.\n",
+      "Finished BSSN symbolic expressions in 4.320722818374634 seconds.\n",
+      "Generating C code for BSSN RHSs (FD_order=2,Tmunu=True) in Cartesian coordinates.\n",
+      "Finished Ricci C codegen (FD_order=2) in 14.124305009841919 seconds.\n",
       "Generating symbolic expressions for BSSN RHSs...\n",
-      "Finished Ricci C codegen (FD_order=4) in 20.13350009918213 seconds.\n",
+      "Finished Ricci C codegen (FD_order=4) in 18.257956504821777 seconds.\n",
       "Generating symbolic expressions for BSSN RHSs...\n",
-      "Finished BSSN_RHS C codegen (FD_order=2,Tmunu=True) in 18.90221381187439 seconds.\n",
-      "Finished Ricci C codegen (FD_order=4) in 20.180564165115356 seconds.\n",
-      "Finished BSSN symbolic expressions in 3.02050518989563 seconds.\n",
+      "Finished BSSN symbolic expressions in 2.775031805038452 seconds.\n",
       "Generating C code for Ricci tensor (FD_order=6) in Cartesian coordinates.\n",
-      "Generating optimized C code for Ham. & mom. constraints. May take a while, depending on CoordSystem.\n",
-      "Finished BSSN symbolic expressions in 3.0469627380371094 seconds.\n",
+      "Finished BSSN_RHS C codegen (FD_order=2,Tmunu=True) in 17.340083837509155 seconds.\n",
+      "Finished Ricci C codegen (FD_order=4) in 18.209490537643433 seconds.\n",
+      "Finished BSSN symbolic expressions in 2.421424388885498 seconds.\n",
       "Generating C code for Ricci tensor (FD_order=8) in Cartesian coordinates.\n",
-      "Finished BSSN_RHS C codegen (FD_order=4,Tmunu=False) in 23.91645359992981 seconds.\n",
       "Generating optimized C code for Ham. & mom. constraints. May take a while, depending on CoordSystem.\n",
       "Generating optimized C code for Ham. & mom. constraints. May take a while, depending on CoordSystem.\n",
-      "Finished BSSN_RHS C codegen (FD_order=4,Tmunu=True) in 27.47530961036682 seconds.\n",
-      "Generating optimized C code for Ham. & mom. constraints. May take a while, depending on CoordSystem.\n",
-      "Finished BSSN_RHS C codegen (FD_order=6,Tmunu=False) in 53.93323588371277 seconds.\n",
-      "Generating optimized C code for Ham. & mom. constraints. May take a while, depending on CoordSystem.\n",
-      "Finished Ricci C codegen (FD_order=6) in 45.071879386901855 seconds.\n",
-      "Generating optimized C code (FD_order=2) for gamma constraint. May take a while, depending on CoordSystem.\n",
-      "Finished gamma constraint C codegen (FD_order=2) in 0.16949820518493652 seconds.\n",
-      "Generating optimized C code (FD_order=4) for gamma constraint. May take a while, depending on CoordSystem.\n",
-      "Finished gamma constraint C codegen (FD_order=4) in 0.11828279495239258 seconds.\n",
-      "Generating optimized C code (FD_order=4) for gamma constraint. May take a while, depending on CoordSystem.\n",
-      "Finished gamma constraint C codegen (FD_order=4) in 0.1216127872467041 seconds.\n",
-      "Generating optimized C code (FD_order=6) for gamma constraint. May take a while, depending on CoordSystem.\n",
-      "Finished gamma constraint C codegen (FD_order=6) in 0.12233972549438477 seconds.\n",
-      "Generating optimized C code (FD_order=8) for gamma constraint. May take a while, depending on CoordSystem.\n",
-      "Finished gamma constraint C codegen (FD_order=8) in 0.12845253944396973 seconds.\n",
-      "Finished Hamiltonian & momentum constraint C codegen (FD_order=4,Tmunu=True) in 49.44316387176514 seconds.\n",
-      "Finished Hamiltonian & momentum constraint C codegen (FD_order=2,Tmunu=True) in 51.12437105178833 seconds.\n",
-      "Finished Hamiltonian & momentum constraint C codegen (FD_order=4,Tmunu=False) in 48.94601488113403 seconds.\n",
-      "Finished Hamiltonian & momentum constraint C codegen (FD_order=6,Tmunu=False) in 48.30232381820679 seconds.\n",
-      "Finished Hamiltonian & momentum constraint C codegen (FD_order=8,Tmunu=False) in 39.19708275794983 seconds.\n",
-      "Finished BSSN_RHS C codegen (FD_order=8,Tmunu=False) in 128.62843346595764 seconds.\n",
-      "Finished Ricci C codegen (FD_order=8) in 117.44852662086487 seconds.\n",
-      "Finished C kernel codegen for Baikal and BaikalVacuum in 144.67927718162537 seconds.\n"
+      "Finished BSSN_RHS C codegen (FD_order=4,Tmunu=False) in 21.97043013572693 seconds.\n",
+      "Generating optimized C code for Ham. & mom. constraints. May take a while, depending on CoordSystem.\n"
      ]
     }
    ],
@@ -905,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -993,17 +970,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting BaikalETK/BaikalETK_ccl_file_codegen_validate.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile $BaikalETKdir/BaikalETK_ccl_file_codegen_validate.py\n",
     "\n",
@@ -1132,17 +1101,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Appending to BaikalETK/BaikalETK_ccl_file_codegen_validate.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile -a $BaikalETKdir/BaikalETK_ccl_file_codegen_validate.py\n",
     "\n",
@@ -1283,17 +1244,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Appending to BaikalETK/BaikalETK_ccl_file_codegen_validate.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile -a $BaikalETKdir/BaikalETK_ccl_file_codegen_validate.py\n",
     "\n",
@@ -1460,23 +1413,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "BSSN_Ricci_FD_order_2.h\n",
-      "BSSN_Ricci_FD_order_4.h\n",
-      "BSSN_Ricci_FD_order_6.h\n",
-      "BSSN_Ricci_FD_order_4.h\n",
-      "BSSN_Ricci_FD_order_8.h\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import in_progress.BaikalETK.BaikalETK_ccl_file_codegen_validate as cclgen\n",
     "\n",
@@ -1509,22 +1450,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting BaikalETK/BaikalETK_driver_C_codes_validate.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile $BaikalETKdir/BaikalETK_driver_C_codes_validate.py\n",
     "\n",
     "# Step 1: Import needed core NRPy+ and Python modules\n",
     "from outputC import *            # NRPy+: Core C code output module\n",
+    "import NRPy_param_funcs as par   # NRPy+: Parameter interface\n",
     "import finite_difference as fin  # NRPy+: Finite difference C code generation module\n",
     "import grid as gri               # NRPy+: Functions having to do with numerical grids\n",
     "import loop as lp                # NRPy+: Generate C code loops\n",
@@ -1542,24 +1476,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Appending to BaikalETK/BaikalETK_driver_C_codes_validate.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile -a $BaikalETKdir/BaikalETK_driver_C_codes_validate.py\n",
     "\n",
     "def driver_C_codes_validate(Csrcdict, thornname,\n",
     "                            rhs_list,evol_gfs_list,aux_gfs_list,auxevol_gfs_list,\n",
-    "                            LapseCondition = LapseCondition,\n",
-    "                            enable_stress_energy_source_terms=False):\n",
+    "                            LapseCondition = \"OnePlusLog\", enable_stress_energy_source_terms=False):\n",
+    "    # Set spatial dimension (must be 3 for BSSN)\n",
+    "    par.set_parval_from_str(\"grid::DIM\",3)\n",
+    "    \n",
     "    # First the ETK banner code, proudly showing the NRPy+ banner\n",
     "    import NRPy_logo as logo\n",
     "    outstr = \"\"\"\n",
@@ -1581,17 +1509,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Appending to BaikalETK/BaikalETK_driver_C_codes_validate.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile -a $BaikalETKdir/BaikalETK_driver_C_codes_validate.py\n",
     "\n",
@@ -1613,17 +1533,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Appending to BaikalETK/BaikalETK_driver_C_codes_validate.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile -a $BaikalETKdir/BaikalETK_driver_C_codes_validate.py\n",
     "\n",
@@ -1698,17 +1610,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Appending to BaikalETK/BaikalETK_driver_C_codes_validate.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile -a $BaikalETKdir/BaikalETK_driver_C_codes_validate.py\n",
     "\n",
@@ -1739,19 +1643,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Appending to BaikalETK/BaikalETK_driver_C_codes_validate.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile -a $BaikalETKdir/BaikalETK_driver_C_codes_validate.py\n",
     "\n",
@@ -1792,17 +1688,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Appending to BaikalETK/BaikalETK_driver_C_codes_validate.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile -a $BaikalETKdir/BaikalETK_driver_C_codes_validate.py\n",
     "\n",
@@ -1919,17 +1807,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Appending to BaikalETK/BaikalETK_driver_C_codes_validate.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile -a $BaikalETKdir/BaikalETK_driver_C_codes_validate.py\n",
     "\n",
@@ -2041,17 +1921,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Appending to BaikalETK/BaikalETK_driver_C_codes_validate.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile -a $BaikalETKdir/BaikalETK_driver_C_codes_validate.py\n",
     "\n",
@@ -2122,17 +1994,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Appending to BaikalETK/BaikalETK_driver_C_codes_validate.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile -a $BaikalETKdir/BaikalETK_driver_C_codes_validate.py\n",
     "\n",
@@ -2187,7 +2051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2211,17 +2075,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Appending to BaikalETK/BaikalETK_driver_C_codes_validate.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile -a $BaikalETKdir/BaikalETK_driver_C_codes_validate.py\n",
     "\n",
@@ -2277,17 +2133,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Appending to BaikalETK/BaikalETK_driver_C_codes_validate.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile -a $BaikalETKdir/BaikalETK_driver_C_codes_validate.py\n",
     "\n",
@@ -2346,17 +2194,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Appending to BaikalETK/BaikalETK_driver_C_codes_validate.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile -a $BaikalETKdir/BaikalETK_driver_C_codes_validate.py\n",
     "\n",
@@ -2405,17 +2245,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Appending to BaikalETK/BaikalETK_driver_C_codes_validate.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile -a $BaikalETKdir/BaikalETK_driver_C_codes_validate.py\n",
     "\n",
@@ -2498,22 +2330,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'lp' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-30-1ac4a39d4966>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0maux_gfs_list\u001b[0m     \u001b[0;34m=\u001b[0m \u001b[0mcclgen\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maux_gfs_list\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mauxevol_gfs_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcclgen\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mauxevol_gfs_list\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m driver.driver_C_codes_validate(Csrcdict=Reg_Csrcdict,thornname=\"Baikal\",enable_stress_energy_source_terms=True, \n\u001b[0m\u001b[1;32m      9\u001b[0m                                \u001b[0mrhs_list\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcclgen\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrhs_list\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mevol_gfs_list\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcclgen\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mevol_gfs_list\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m                                aux_gfs_list=cclgen.aux_gfs_list,auxevol_gfs_list=cclgen.auxevol_gfs_list)\n",
-      "\u001b[0;32m~/jup38/nrpytutorial/in_progress/BaikalETK/BaikalETK_driver_C_codes_validate.py\u001b[0m in \u001b[0;36mdriver_C_codes_validate\u001b[0;34m(Csrcdict, thornname, enable_stress_energy_source_terms, rhs_list, evol_gfs_list, aux_gfs_list, auxevol_gfs_list)\u001b[0m\n\u001b[1;32m    130\u001b[0m         \u001b[0mset_rhss_to_zero\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mgf\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m\"[CCTK_GFINDEX3D(cctkGH,i0,i1,i2)] = 0.0;\\n\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    131\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 132\u001b[0;31m     outstr += lp.loop([\"i2\",\"i1\",\"i0\"],[\"0\", \"0\", \"0\"],\n\u001b[0m\u001b[1;32m    133\u001b[0m                       \u001b[0;34m[\u001b[0m\u001b[0;34m\"cctk_lsh[2]\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"cctk_lsh[1]\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"cctk_lsh[0]\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    134\u001b[0m                       \u001b[0;34m[\u001b[0m\u001b[0;34m\"1\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"1\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"1\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'lp' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import in_progress.BaikalETK.BaikalETK_driver_C_codes_validate as driver\n",
     "\n",
