--- a/Tutorial-BaikalETK.ipynb
+++ b/Tutorial-BaikalETK.ipynb
@@ -183,7 +183,7 @@
     "       params=\"WhichPart=BSSN_RHSs,ThornName=Baikal,FD_order=4,enable_stress_energy_source_terms=True\"):\n",
     "    # Set default parameters\n",
     "    WhichPart = \"BSSN_RHSs\"\n",
-    "    ThornName = \"Baikal\"\n",
+    "    ThornName = \"Baikal_validate\"\n",
     "    FD_order = 4\n",
     "    enable_stress_energy_source_terms = True\n",
     "    LapseCondition  = \"OnePlusLog\" # Set the standard 1+log lapse condition\n",
@@ -765,9 +765,9 @@
     "        elif FD_order >= 6:\n",
     "            enable_stress_energy_list = [False]\n",
     "        for enable_stress_energy in enable_stress_energy_list:\n",
-    "            ThornName = \"Baikal\"\n",
+    "            ThornName = \"Baikal_validate\"\n",
     "            if enable_stress_energy == False:\n",
-    "                ThornName = \"BaikalVacuum\"\n",
+    "                ThornName = \"BaikalVacuum_validate\"\n",
     "            paramstr = \"WhichPart=\"+WhichPart+\",\"\n",
     "            paramstr+= \"WhichParamSet=\"+str(WhichParamSet)+\",\"\n",
     "            paramstr+= \"ThornName=\"+ThornName+\",\"\n",
@@ -1509,9 +1509,9 @@
     "import BaikalETK_validate.BaikalETK_ETK_ccl_files_codegen as cclgen\n",
     "\n",
     "for enable_stress_energy_source_terms in [True,False]:\n",
-    "    ThornName=\"Baikal\"\n",
+    "    ThornName=\"Baikal_validate\"\n",
     "    if enable_stress_energy_source_terms==False:\n",
-    "        ThornName=\"BaikalVacuum\"\n",
+    "        ThornName=\"BaikalVacuum_validate\"\n",
     "    cclgen.output_param_ccl(ThornName,enable_stress_energy_source_terms)\n",
     "    cclgen.output_interface_ccl(ThornName,enable_stress_energy_source_terms)\n",
     "    cclgen.output_schedule_ccl(ThornName,enable_stress_energy_source_terms)"
@@ -2580,12 +2580,12 @@
     "auxevol_gfs_list = cclgen.auxevol_gfs_list\n",
     "\n",
     "# Generate driver codes for Baikal thorn (i.e., populate the Reg_Csrcdict dictionary)\n",
-    "driver.driver_C_codes(Reg_Csrcdict, \"Baikal\",\n",
+    "driver.driver_C_codes(Reg_Csrcdict, \"Baikal_validate\",\n",
     "                               cclgen.rhs_list,cclgen.evol_gfs_list,cclgen.aux_gfs_list,cclgen.auxevol_gfs_list,\n",
     "                               LapseCondition = LapseCondition, enable_stress_energy_source_terms=True)\n",
     "\n",
     "# Generate driver codes for BaikalVacuum thorn (i.e., populate the Vac_Csrcdict dictionary)\n",
-    "driver.driver_C_codes(Vac_Csrcdict, \"BaikalVacuum\",\n",
+    "driver.driver_C_codes(Vac_Csrcdict, \"BaikalVacuum_validate\",\n",
     "                               cclgen.rhs_list,cclgen.evol_gfs_list,cclgen.aux_gfs_list,cclgen.auxevol_gfs_list,\n",
     "                               LapseCondition = LapseCondition, enable_stress_energy_source_terms=False)\n",
     "\n",
@@ -2593,10 +2593,10 @@
     "#   Vac_Csrcdict dictionaries to files in the respective\n",
     "#   thorns' directories.\n",
     "for key,val in Reg_Csrcdict.items():\n",
-    "    with open(os.path.join(\"Baikal\",\"src\",key),\"w\") as file:\n",
+    "    with open(os.path.join(\"Baikal_validate\",\"src\",key),\"w\") as file:\n",
     "        file.write(val)\n",
     "for key,val in Vac_Csrcdict.items():\n",
-    "    with open(os.path.join(\"BaikalVacuum\",\"src\",key),\"w\") as file:\n",
+    "    with open(os.path.join(\"BaikalVacuum_validate\",\"src\",key),\"w\") as file:\n",
     "        file.write(val)"
    ]
   },
@@ -2639,8 +2639,8 @@
     "                filestring += \"\\n\"\n",
     "        file.write(filestring)\n",
     "\n",
-    "output_make_code_defn(Reg_Csrcdict,\"Baikal\")\n",
-    "output_make_code_defn(Vac_Csrcdict,\"BaikalVacuum\")"
+    "output_make_code_defn(Reg_Csrcdict,\"Baikal_validate\")\n",
+    "output_make_code_defn(Vac_Csrcdict,\"BaikalVacuum_validate\")"
    ]
   },
   {
