--- a/Tutorial-BaikalETK.ipynb
+++ b/Tutorial-BaikalETK.ipynb
@@ -144,7 +144,7 @@
     "#   BaikalETK.\n",
     "BaikalETKdir = \"BaikalETK_validate\"\n",
     "import cmdline_helper as cmd  # NRPy+: Multi-platform Python command-line interface\n",
-    "import os, sys                # Standard Python modules for multiplatform OS-level functions\n",
+    "import os, sys, shutil        # Standard Python modules for multiplatform OS-level functions\n",
     "\n",
     "cmd.mkdir(os.path.join(BaikalETKdir))"
    ]
@@ -183,7 +183,7 @@
     "       params=\"WhichPart=BSSN_RHSs,ThornName=Baikal,FD_order=4,enable_stress_energy_source_terms=True\"):\n",
     "    # Set default parameters\n",
     "    WhichPart = \"BSSN_RHSs\"\n",
-    "    ThornName = \"Baikal_validate\"\n",
+    "    ThornName = \"Baikal\"\n",
     "    FD_order = 4\n",
     "    enable_stress_energy_source_terms = True\n",
     "    LapseCondition  = \"OnePlusLog\" # Set the standard 1+log lapse condition\n",
@@ -765,9 +765,9 @@
     "        elif FD_order >= 6:\n",
     "            enable_stress_energy_list = [False]\n",
     "        for enable_stress_energy in enable_stress_energy_list:\n",
-    "            ThornName = \"Baikal_validate\"\n",
+    "            ThornName = \"Baikal\"\n",
     "            if enable_stress_energy == False:\n",
-    "                ThornName = \"BaikalVacuum_validate\"\n",
+    "                ThornName = \"BaikalVacuum\"\n",
     "            paramstr = \"WhichPart=\"+WhichPart+\",\"\n",
     "            paramstr+= \"WhichParamSet=\"+str(WhichParamSet)+\",\"\n",
     "            paramstr+= \"ThornName=\"+ThornName+\",\"\n",
@@ -806,61 +806,61 @@
       "Generating symbolic expressions for BSSN RHSs...\n",
       "Generating symbolic expressions for BSSN RHSs...\n",
       "Generating symbolic expressions for BSSN RHSs...\n",
-      "Generating symbolic expressions for BSSN RHSs...\n",
-      "Generating symbolic expressions for BSSN RHSs...\n",
-      "Finished BSSN symbolic expressions in 2.4424731731414795 seconds.\n",
-      "Generating C code for BSSN RHSs (FD_order=6,Tmunu=False) in Cartesian coordinates.\n",
-      "Finished BSSN symbolic expressions in 2.569204330444336 seconds.\n",
-      "Generating C code for BSSN RHSs (FD_order=8,Tmunu=False) in Cartesian coordinates.\n",
-      "Finished BSSN symbolic expressions in 2.5907607078552246 seconds.\n",
-      "Generating C code for Ricci tensor (FD_order=4) in Cartesian coordinates.\n",
-      "Finished BSSN symbolic expressions in 2.7244362831115723 seconds.\n",
-      "Generating C code for BSSN RHSs (FD_order=4,Tmunu=False) in Cartesian coordinates.\n",
-      "Finished BSSN symbolic expressions in 4.361576557159424 seconds.\n",
-      "Generating C code for BSSN RHSs (FD_order=4,Tmunu=True) in Cartesian coordinates.\n",
-      "Finished BSSN symbolic expressions in 4.5102057456970215 seconds.\n",
-      "Generating C code for BSSN RHSs (FD_order=2,Tmunu=True) in Cartesian coordinates.\n",
-      "Finished BSSN symbolic expressions in 4.532924175262451 seconds.\n",
-      "Generating C code for Ricci tensor (FD_order=2) in Cartesian coordinates.\n",
-      "Finished BSSN symbolic expressions in 4.507793426513672 seconds.\n",
-      "Generating C code for Ricci tensor (FD_order=4) in Cartesian coordinates.\n",
-      "Finished Ricci C codegen (FD_order=2) in 15.57735013961792 seconds.\n",
-      "Generating symbolic expressions for BSSN RHSs...\n",
-      "Finished BSSN symbolic expressions in 2.55832839012146 seconds.\n",
-      "Generating C code for Ricci tensor (FD_order=6) in Cartesian coordinates.\n",
-      "Finished Ricci C codegen (FD_order=4) in 20.330645322799683 seconds.\n",
-      "Generating symbolic expressions for BSSN RHSs...\n",
-      "Finished BSSN_RHS C codegen (FD_order=2,Tmunu=True) in 19.105502605438232 seconds.\n",
-      "Finished Ricci C codegen (FD_order=4) in 20.38882827758789 seconds.\n",
-      "Finished BSSN symbolic expressions in 2.4258463382720947 seconds.\n",
-      "Generating C code for Ricci tensor (FD_order=8) in Cartesian coordinates.\n",
-      "Finished BSSN_RHS C codegen (FD_order=4,Tmunu=False) in 23.731901168823242 seconds.\n",
-      "Generating optimized C code for Ham. & mom. constraints. May take a while, depending on CoordSystem.\n",
-      "Generating optimized C code for Ham. & mom. constraints. May take a while, depending on CoordSystem.\n",
-      "Generating optimized C code for Ham. & mom. constraints. May take a while, depending on CoordSystem.\n",
-      "Finished BSSN_RHS C codegen (FD_order=4,Tmunu=True) in 26.520660400390625 seconds.\n",
-      "Generating optimized C code for Ham. & mom. constraints. May take a while, depending on CoordSystem.\n",
-      "Finished BSSN_RHS C codegen (FD_order=6,Tmunu=False) in 50.04306101799011 seconds.\n",
-      "Generating optimized C code for Ham. & mom. constraints. May take a while, depending on CoordSystem.\n",
-      "Finished Ricci C codegen (FD_order=6) in 43.33006429672241 seconds.\n",
-      "Generating optimized C code (FD_order=2) for gamma constraint. May take a while, depending on CoordSystem.\n",
-      "Finished gamma constraint C codegen (FD_order=2) in 0.2740473747253418 seconds.\n",
       "Generating optimized C code (FD_order=4) for gamma constraint. May take a while, depending on CoordSystem.\n",
-      "Finished gamma constraint C codegen (FD_order=4) in 0.16511869430541992 seconds.\n",
-      "Generating optimized C code (FD_order=4) for gamma constraint. May take a while, depending on CoordSystem.\n",
-      "Finished gamma constraint C codegen (FD_order=4) in 0.12127184867858887 seconds.\n",
-      "Generating optimized C code (FD_order=6) for gamma constraint. May take a while, depending on CoordSystem.\n",
-      "Finished gamma constraint C codegen (FD_order=6) in 0.13541388511657715 seconds.\n",
+      "Generating symbolic expressions for BSSN RHSs...\n",
+      "Generating symbolic expressions for BSSN RHSs...\n",
+      "Finished gamma constraint C codegen (FD_order=4) in 0.08805203437805176 seconds.\n",
+      "Generating symbolic expressions for BSSN RHSs...\n",
+      "Generating symbolic expressions for BSSN RHSs...\n",
       "Generating optimized C code (FD_order=8) for gamma constraint. May take a while, depending on CoordSystem.\n",
-      "Finished gamma constraint C codegen (FD_order=8) in 0.10739326477050781 seconds.\n",
-      "Finished Hamiltonian & momentum constraint C codegen (FD_order=2,Tmunu=True) in 47.06786751747131 seconds.\n",
-      "Finished Hamiltonian & momentum constraint C codegen (FD_order=4,Tmunu=False) in 48.36753010749817 seconds.\n",
-      "Finished Hamiltonian & momentum constraint C codegen (FD_order=4,Tmunu=True) in 47.33324885368347 seconds.\n",
-      "Finished Hamiltonian & momentum constraint C codegen (FD_order=6,Tmunu=False) in 47.289902687072754 seconds.\n",
-      "Finished Hamiltonian & momentum constraint C codegen (FD_order=8,Tmunu=False) in 38.304823875427246 seconds.\n",
-      "Finished BSSN_RHS C codegen (FD_order=8,Tmunu=False) in 121.03628993034363 seconds.\n",
-      "Finished Ricci C codegen (FD_order=8) in 110.56166458129883 seconds.\n",
-      "Finished C kernel codegen for Baikal and BaikalVacuum in 136.63782787322998 seconds.\n"
+      "Generating optimized C code (FD_order=4) for gamma constraint. May take a while, depending on CoordSystem.\n",
+      "Generating optimized C code (FD_order=6) for gamma constraint. May take a while, depending on CoordSystem.\n",
+      "Generating optimized C code (FD_order=2) for gamma constraint. May take a while, depending on CoordSystem.\n",
+      "Finished gamma constraint C codegen (FD_order=8) in 0.05938601493835449 seconds.\n",
+      "Finished gamma constraint C codegen (FD_order=4) in 0.07921171188354492 seconds.\n",
+      "Finished gamma constraint C codegen (FD_order=6) in 0.07957601547241211 seconds.\n",
+      "Finished gamma constraint C codegen (FD_order=2) in 0.08838343620300293 seconds.\n",
+      "Generating optimized C code for Ham. & mom. constraints. May take a while, depending on CoordSystem.\n",
+      "Generating optimized C code for Ham. & mom. constraints. May take a while, depending on CoordSystem.\n",
+      "Generating optimized C code for Ham. & mom. constraints. May take a while, depending on CoordSystem.\n",
+      "Finished BSSN symbolic expressions in 1.120973825454712 seconds.\n",
+      "Generating C code for Ricci tensor (FD_order=4) in Cartesian coordinates.\n",
+      "Finished BSSN symbolic expressions in 1.1337623596191406 seconds.\n",
+      "Generating C code for BSSN RHSs (FD_order=6,Tmunu=False) in Cartesian coordinates.\n",
+      "Finished BSSN symbolic expressions in 1.1069209575653076 seconds.\n",
+      "Generating C code for Ricci tensor (FD_order=6) in Cartesian coordinates.\n",
+      "Finished BSSN symbolic expressions in 1.2811145782470703 seconds.\n",
+      "Generating C code for BSSN RHSs (FD_order=8,Tmunu=False) in Cartesian coordinates.\n",
+      "Finished BSSN symbolic expressions in 1.2895662784576416 seconds.\n",
+      "Finished BSSN symbolic expressions in 1.1286048889160156 seconds.\n",
+      "Generating C code for Ricci tensor (FD_order=8) in Cartesian coordinates.\n",
+      "Generating C code for BSSN RHSs (FD_order=4,Tmunu=False) in Cartesian coordinates.\n",
+      "Finished BSSN symbolic expressions in 1.9164974689483643 seconds.\n",
+      "Generating C code for Ricci tensor (FD_order=2) in Cartesian coordinates.\n",
+      "Finished BSSN symbolic expressions in 1.980640172958374 seconds.\n",
+      "Generating C code for BSSN RHSs (FD_order=2,Tmunu=True) in Cartesian coordinates.\n",
+      "Finished BSSN symbolic expressions in 2.091244697570801 seconds.\n",
+      "Generating C code for Ricci tensor (FD_order=4) in Cartesian coordinates.\n",
+      "Finished BSSN symbolic expressions in 2.0287024974823 seconds.\n",
+      "Generating C code for BSSN RHSs (FD_order=4,Tmunu=True) in Cartesian coordinates.\n",
+      "Generating optimized C code for Ham. & mom. constraints. May take a while, depending on CoordSystem.\n",
+      "Generating optimized C code for Ham. & mom. constraints. May take a while, depending on CoordSystem.\n",
+      "Finished Ricci C codegen (FD_order=2) in 6.476215600967407 seconds.\n",
+      "Finished Ricci C codegen (FD_order=4) in 8.311211824417114 seconds.\n",
+      "Finished BSSN_RHS C codegen (FD_order=2,Tmunu=True) in 7.952273607254028 seconds.\n",
+      "Finished Ricci C codegen (FD_order=4) in 8.32931637763977 seconds.\n",
+      "Finished BSSN_RHS C codegen (FD_order=4,Tmunu=False) in 9.989457845687866 seconds.\n",
+      "Finished BSSN_RHS C codegen (FD_order=4,Tmunu=True) in 11.12312126159668 seconds.\n",
+      "Finished Ricci C codegen (FD_order=6) in 18.88793182373047 seconds.\n",
+      "Finished Hamiltonian & momentum constraint C codegen (FD_order=4,Tmunu=False) in 20.341381788253784 seconds.\n",
+      "Finished Hamiltonian & momentum constraint C codegen (FD_order=6,Tmunu=False) in 21.31023335456848 seconds.\n",
+      "Finished Hamiltonian & momentum constraint C codegen (FD_order=2,Tmunu=True) in 20.156418323516846 seconds.\n",
+      "Finished BSSN_RHS C codegen (FD_order=6,Tmunu=False) in 21.76969289779663 seconds.\n",
+      "Finished Hamiltonian & momentum constraint C codegen (FD_order=4,Tmunu=True) in 20.71919059753418 seconds.\n",
+      "Finished Hamiltonian & momentum constraint C codegen (FD_order=8,Tmunu=False) in 23.352384090423584 seconds.\n",
+      "Finished BSSN_RHS C codegen (FD_order=8,Tmunu=False) in 70.16376399993896 seconds.\n",
+      "Finished Ricci C codegen (FD_order=8) in 72.5581305027008 seconds.\n",
+      "Finished C kernel codegen for Baikal and BaikalVacuum in 74.21695184707642 seconds.\n"
      ]
     }
    ],
@@ -878,21 +878,22 @@
     "        # Windows & Jupyter multiprocessing do not mix, so we run in serial on Windows.\n",
     "        #  Here's why: https://stackoverflow.com/questions/45719956/python-multiprocessing-in-jupyter-on-windows-attributeerror-cant-get-attribut\n",
     "        raise Exception(\"Parallel codegen currently not available in Windows\")\n",
-    "    # Step 3.d.ii: Import the multiprocessing module.\n",
-    "    import multiprocessing\n",
+    "    if __name__ == \"__main__\":\n",
+    "        # Step 3.d.ii: Import the multiprocessing module.\n",
+    "        import multiprocessing\n",
     "\n",
-    "    # Step 3.d.iii: Define master function for parallelization.\n",
-    "    #           Note that lambdifying this doesn't work in Python 3\n",
-    "    def master_func(i):\n",
-    "        import BaikalETK_validate.BaikalETK_C_kernels_codegen as BCk\n",
-    "        return BCk.BaikalETK_C_kernels_codegen_onepart(NRPyDir=os.path.join(\".\"),params=paramslist[i])\n",
+    "        # Step 3.d.iii: Define master function for parallelization.\n",
+    "        #           Note that lambdifying this doesn't work in Python 3\n",
+    "        def master_func(i):\n",
+    "            import BaikalETK_validate.BaikalETK_C_kernels_codegen as BCk\n",
+    "            return BCk.BaikalETK_C_kernels_codegen_onepart(NRPyDir=os.path.join(\".\"),params=paramslist[i])\n",
     "\n",
-    "    # Step 3.d.iv: Evaluate list of functions in parallel if possible;\n",
-    "    #           otherwise fallback to serial evaluation:\n",
-    "    pool = multiprocessing.Pool() #processes=len(paramslist))\n",
-    "    NRPyEnvVars.append(pool.map(master_func,range(len(paramslist))))\n",
-    "    pool.terminate()\n",
-    "    pool.join()\n",
+    "        # Step 3.d.iv: Evaluate list of functions in parallel if possible;\n",
+    "        #           otherwise fallback to serial evaluation:\n",
+    "        pool = multiprocessing.Pool() #processes=len(paramslist))\n",
+    "        NRPyEnvVars.append(pool.map(master_func,range(len(paramslist))))\n",
+    "        pool.terminate()\n",
+    "        pool.join()\n",
     "except:\n",
     "    # Steps 3.d.ii-iv, alternate: As fallback, evaluate functions in serial.\n",
     "    #       This will happen on Android and Windows systems\n",
@@ -1509,9 +1510,9 @@
     "import BaikalETK_validate.BaikalETK_ETK_ccl_files_codegen as cclgen\n",
     "\n",
     "for enable_stress_energy_source_terms in [True,False]:\n",
-    "    ThornName=\"Baikal_validate\"\n",
+    "    ThornName=\"Baikal\"\n",
     "    if enable_stress_energy_source_terms==False:\n",
-    "        ThornName=\"BaikalVacuum_validate\"\n",
+    "        ThornName=\"BaikalVacuum\"\n",
     "    cclgen.output_param_ccl(ThornName,enable_stress_energy_source_terms)\n",
     "    cclgen.output_interface_ccl(ThornName,enable_stress_energy_source_terms)\n",
     "    cclgen.output_schedule_ccl(ThornName,enable_stress_energy_source_terms)"
@@ -2580,12 +2581,12 @@
     "auxevol_gfs_list = cclgen.auxevol_gfs_list\n",
     "\n",
     "# Generate driver codes for Baikal thorn (i.e., populate the Reg_Csrcdict dictionary)\n",
-    "driver.driver_C_codes(Reg_Csrcdict, \"Baikal_validate\",\n",
+    "driver.driver_C_codes(Reg_Csrcdict, \"Baikal\",\n",
     "                               cclgen.rhs_list,cclgen.evol_gfs_list,cclgen.aux_gfs_list,cclgen.auxevol_gfs_list,\n",
     "                               LapseCondition = LapseCondition, enable_stress_energy_source_terms=True)\n",
     "\n",
     "# Generate driver codes for BaikalVacuum thorn (i.e., populate the Vac_Csrcdict dictionary)\n",
-    "driver.driver_C_codes(Vac_Csrcdict, \"BaikalVacuum_validate\",\n",
+    "driver.driver_C_codes(Vac_Csrcdict, \"BaikalVacuum\",\n",
     "                               cclgen.rhs_list,cclgen.evol_gfs_list,cclgen.aux_gfs_list,cclgen.auxevol_gfs_list,\n",
     "                               LapseCondition = LapseCondition, enable_stress_energy_source_terms=False)\n",
     "\n",
@@ -2593,10 +2594,10 @@
     "#   Vac_Csrcdict dictionaries to files in the respective\n",
     "#   thorns' directories.\n",
     "for key,val in Reg_Csrcdict.items():\n",
-    "    with open(os.path.join(\"Baikal_validate\",\"src\",key),\"w\") as file:\n",
+    "    with open(os.path.join(\"Baikal\",\"src\",key),\"w\") as file:\n",
     "        file.write(val)\n",
     "for key,val in Vac_Csrcdict.items():\n",
-    "    with open(os.path.join(\"BaikalVacuum_validate\",\"src\",key),\"w\") as file:\n",
+    "    with open(os.path.join(\"BaikalVacuum\",\"src\",key),\"w\") as file:\n",
     "        file.write(val)"
    ]
   },
@@ -2639,8 +2640,8 @@
     "                filestring += \"\\n\"\n",
     "        file.write(filestring)\n",
     "\n",
-    "output_make_code_defn(Reg_Csrcdict,\"Baikal_validate\")\n",
-    "output_make_code_defn(Vac_Csrcdict,\"BaikalVacuum_validate\")"
+    "output_make_code_defn(Reg_Csrcdict,\"Baikal\")\n",
+    "output_make_code_defn(Vac_Csrcdict,\"BaikalVacuum\")"
    ]
   },
   {
@@ -2673,11 +2674,45 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "'validate/BaikalVacuum'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# First move the Baikal and Baikal_vacuum thorns just generated by this notebook to \n",
+    "#  the validate/ subdirectory:\n",
+    "cmd.mkdir(\"validate\")\n",
+    "shutil.move(\"Baikal\",\"validate\")\n",
+    "shutil.move(\"BaikalVacuum\",\"validate\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Ignoring lines with only whitespace:\n",
-      "PASSED: BaikalETK_C_drivers_codegen.py\n",
+      "--- BaikalETK_validate/BaikalETK_C_drivers_codegen.py\n",
+      "+++ BaikalETK/BaikalETK_C_drivers_codegen.py\n",
+      "@@ -8,7 +8,7 @@\n",
+      " import indexedexp as ixp         # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
+      " import os, sys           # Standard Python modules for multiplatform OS-level functions\n",
+      " # We need the function keep_param__return_type() from this module:\n",
+      "-import BaikalETK_validate.BaikalETK_ETK_ccl_files_codegen as ccl\n",
+      "+import BaikalETK.BaikalETK_ETK_ccl_files_codegen as ccl\n",
+      "  make_code_defn_list = []\n",
+      " def append_to_make_code_defn_list(filename):\n",
+      "FAILED (see diff above): BaikalETK_C_drivers_codegen.py\n",
       "PASSED: BaikalETK_C_kernels_codegen.py\n",
       "PASSED: BaikalETK_ETK_ccl_files_codegen.py\n"
      ]
@@ -2722,7 +2757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {
     "scrolled": true
    },
@@ -2746,7 +2781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
