Tutorial-BaikalETK.ipynb: improve parallel codegen robustness

--- a/Tutorial-BaikalETK.ipynb
+++ b/Tutorial-BaikalETK.ipynb
@@ -158,7 +158,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting BaikalETK_validate/BaikalETK_C_kernels_codegen.py\n"
+      "Writing BaikalETK_validate/BaikalETK_C_kernels_codegen.py\n"
      ]
     }
    ],
@@ -803,64 +803,64 @@
       "Generating symbolic expressions for BSSN RHSs...\n",
       "Generating symbolic expressions for BSSN RHSs...\n",
       "Generating symbolic expressions for BSSN RHSs...\n",
-      "Generating symbolic expressions for BSSN RHSs...\n",
-      "Generating symbolic expressions for BSSN RHSs...\n",
+      "Generating optimized C code (FD_order=4) for gamma constraint. May take a while, depending on CoordSystem.\n",
       "Generating symbolic expressions for BSSN RHSs...\n",
       "Generating optimized C code (FD_order=4) for gamma constraint. May take a while, depending on CoordSystem.\n",
       "Generating symbolic expressions for BSSN RHSs...\n",
       "Generating symbolic expressions for BSSN RHSs...\n",
-      "Finished gamma constraint C codegen (FD_order=4) in 0.08805203437805176 seconds.\n",
       "Generating symbolic expressions for BSSN RHSs...\n",
       "Generating symbolic expressions for BSSN RHSs...\n",
-      "Generating optimized C code (FD_order=8) for gamma constraint. May take a while, depending on CoordSystem.\n",
-      "Generating optimized C code (FD_order=4) for gamma constraint. May take a while, depending on CoordSystem.\n",
-      "Generating optimized C code (FD_order=6) for gamma constraint. May take a while, depending on CoordSystem.\n",
+      "Generating symbolic expressions for BSSN RHSs...\n",
+      "Generating symbolic expressions for BSSN RHSs...\n",
+      "Finished gamma constraint C codegen (FD_order=4) in 0.08008456230163574 seconds.\n",
       "Generating optimized C code (FD_order=2) for gamma constraint. May take a while, depending on CoordSystem.\n",
-      "Finished gamma constraint C codegen (FD_order=8) in 0.05938601493835449 seconds.\n",
-      "Finished gamma constraint C codegen (FD_order=4) in 0.07921171188354492 seconds.\n",
-      "Finished gamma constraint C codegen (FD_order=6) in 0.07957601547241211 seconds.\n",
-      "Finished gamma constraint C codegen (FD_order=2) in 0.08838343620300293 seconds.\n",
+      "Finished gamma constraint C codegen (FD_order=4) in 0.07410836219787598 seconds.\n",
+      "Generating optimized C code (FD_order=6) for gamma constraint. May take a while, depending on CoordSystem.\n",
+      "Generating optimized C code (FD_order=8) for gamma constraint. May take a while, depending on CoordSystem.\n",
+      "Finished gamma constraint C codegen (FD_order=6) in 0.048384904861450195 seconds.\n",
+      "Finished gamma constraint C codegen (FD_order=8) in 0.06190681457519531 seconds.\n",
+      "Finished gamma constraint C codegen (FD_order=2) in 0.07458019256591797 seconds.\n",
       "Generating optimized C code for Ham. & mom. constraints. May take a while, depending on CoordSystem.\n",
       "Generating optimized C code for Ham. & mom. constraints. May take a while, depending on CoordSystem.\n",
       "Generating optimized C code for Ham. & mom. constraints. May take a while, depending on CoordSystem.\n",
-      "Finished BSSN symbolic expressions in 1.120973825454712 seconds.\n",
-      "Generating C code for Ricci tensor (FD_order=4) in Cartesian coordinates.\n",
-      "Finished BSSN symbolic expressions in 1.1337623596191406 seconds.\n",
+      "Finished BSSN symbolic expressions in 1.1221206188201904 seconds.\n",
       "Generating C code for BSSN RHSs (FD_order=6,Tmunu=False) in Cartesian coordinates.\n",
-      "Finished BSSN symbolic expressions in 1.1069209575653076 seconds.\n",
-      "Generating C code for Ricci tensor (FD_order=6) in Cartesian coordinates.\n",
-      "Finished BSSN symbolic expressions in 1.2811145782470703 seconds.\n",
-      "Generating C code for BSSN RHSs (FD_order=8,Tmunu=False) in Cartesian coordinates.\n",
-      "Finished BSSN symbolic expressions in 1.2895662784576416 seconds.\n",
-      "Finished BSSN symbolic expressions in 1.1286048889160156 seconds.\n",
+      "Finished BSSN symbolic expressions in 1.1452717781066895 seconds.\n",
       "Generating C code for Ricci tensor (FD_order=8) in Cartesian coordinates.\n",
-      "Generating C code for BSSN RHSs (FD_order=4,Tmunu=False) in Cartesian coordinates.\n",
-      "Finished BSSN symbolic expressions in 1.9164974689483643 seconds.\n",
-      "Generating C code for Ricci tensor (FD_order=2) in Cartesian coordinates.\n",
-      "Finished BSSN symbolic expressions in 1.980640172958374 seconds.\n",
-      "Generating C code for BSSN RHSs (FD_order=2,Tmunu=True) in Cartesian coordinates.\n",
-      "Finished BSSN symbolic expressions in 2.091244697570801 seconds.\n",
+      "Finished BSSN symbolic expressions in 1.1693775653839111 seconds.\n",
       "Generating C code for Ricci tensor (FD_order=4) in Cartesian coordinates.\n",
-      "Finished BSSN symbolic expressions in 2.0287024974823 seconds.\n",
+      "Finished BSSN symbolic expressions in 1.1993968486785889 seconds.\n",
+      "Generating C code for Ricci tensor (FD_order=6) in Cartesian coordinates.\n",
+      "Finished BSSN symbolic expressions in 1.186713695526123 seconds.\n",
+      "Generating C code for BSSN RHSs (FD_order=4,Tmunu=False) in Cartesian coordinates.\n",
+      "Finished BSSN symbolic expressions in 1.4134275913238525 seconds.\n",
+      "Generating C code for BSSN RHSs (FD_order=8,Tmunu=False) in Cartesian coordinates.\n",
+      "Finished BSSN symbolic expressions in 1.9111950397491455 seconds.\n",
+      "Generating C code for Ricci tensor (FD_order=2) in Cartesian coordinates.\n",
+      "Finished BSSN symbolic expressions in 2.0160975456237793 seconds.\n",
       "Generating C code for BSSN RHSs (FD_order=4,Tmunu=True) in Cartesian coordinates.\n",
+      "Finished BSSN symbolic expressions in 1.9071547985076904 seconds.\n",
+      "Generating C code for BSSN RHSs (FD_order=2,Tmunu=True) in Cartesian coordinates.\n",
+      "Finished BSSN symbolic expressions in 1.9251470565795898 seconds.\n",
+      "Generating C code for Ricci tensor (FD_order=4) in Cartesian coordinates.\n",
       "Generating optimized C code for Ham. & mom. constraints. May take a while, depending on CoordSystem.\n",
       "Generating optimized C code for Ham. & mom. constraints. May take a while, depending on CoordSystem.\n",
-      "Finished Ricci C codegen (FD_order=2) in 6.476215600967407 seconds.\n",
-      "Finished Ricci C codegen (FD_order=4) in 8.311211824417114 seconds.\n",
-      "Finished BSSN_RHS C codegen (FD_order=2,Tmunu=True) in 7.952273607254028 seconds.\n",
-      "Finished Ricci C codegen (FD_order=4) in 8.32931637763977 seconds.\n",
-      "Finished BSSN_RHS C codegen (FD_order=4,Tmunu=False) in 9.989457845687866 seconds.\n",
-      "Finished BSSN_RHS C codegen (FD_order=4,Tmunu=True) in 11.12312126159668 seconds.\n",
-      "Finished Ricci C codegen (FD_order=6) in 18.88793182373047 seconds.\n",
-      "Finished Hamiltonian & momentum constraint C codegen (FD_order=4,Tmunu=False) in 20.341381788253784 seconds.\n",
-      "Finished Hamiltonian & momentum constraint C codegen (FD_order=6,Tmunu=False) in 21.31023335456848 seconds.\n",
-      "Finished Hamiltonian & momentum constraint C codegen (FD_order=2,Tmunu=True) in 20.156418323516846 seconds.\n",
-      "Finished BSSN_RHS C codegen (FD_order=6,Tmunu=False) in 21.76969289779663 seconds.\n",
-      "Finished Hamiltonian & momentum constraint C codegen (FD_order=4,Tmunu=True) in 20.71919059753418 seconds.\n",
-      "Finished Hamiltonian & momentum constraint C codegen (FD_order=8,Tmunu=False) in 23.352384090423584 seconds.\n",
-      "Finished BSSN_RHS C codegen (FD_order=8,Tmunu=False) in 70.16376399993896 seconds.\n",
-      "Finished Ricci C codegen (FD_order=8) in 72.5581305027008 seconds.\n",
-      "Finished C kernel codegen for Baikal and BaikalVacuum in 74.21695184707642 seconds.\n"
+      "Finished Ricci C codegen (FD_order=2) in 6.557067155838013 seconds.\n",
+      "Finished Ricci C codegen (FD_order=4) in 8.30366063117981 seconds.\n",
+      "Finished BSSN_RHS C codegen (FD_order=2,Tmunu=True) in 7.9198644161224365 seconds.\n",
+      "Finished Ricci C codegen (FD_order=4) in 8.398651838302612 seconds.\n",
+      "Finished BSSN_RHS C codegen (FD_order=4,Tmunu=False) in 10.188489198684692 seconds.\n",
+      "Finished BSSN_RHS C codegen (FD_order=4,Tmunu=True) in 11.601524353027344 seconds.\n",
+      "Finished Ricci C codegen (FD_order=6) in 19.56866979598999 seconds.\n",
+      "Finished Hamiltonian & momentum constraint C codegen (FD_order=4,Tmunu=False) in 20.800107717514038 seconds.\n",
+      "Finished Hamiltonian & momentum constraint C codegen (FD_order=6,Tmunu=False) in 21.486732482910156 seconds.\n",
+      "Finished Hamiltonian & momentum constraint C codegen (FD_order=2,Tmunu=True) in 20.21525740623474 seconds.\n",
+      "Finished BSSN_RHS C codegen (FD_order=6,Tmunu=False) in 22.100085735321045 seconds.\n",
+      "Finished Hamiltonian & momentum constraint C codegen (FD_order=4,Tmunu=True) in 20.824480533599854 seconds.\n",
+      "Finished Hamiltonian & momentum constraint C codegen (FD_order=8,Tmunu=False) in 24.17224383354187 seconds.\n",
+      "Finished BSSN_RHS C codegen (FD_order=8,Tmunu=False) in 70.87766194343567 seconds.\n",
+      "Finished Ricci C codegen (FD_order=8) in 72.98748564720154 seconds.\n",
+      "Finished C kernel codegen for Baikal and BaikalVacuum in 74.63257050514221 seconds.\n"
      ]
     }
    ],
@@ -892,10 +892,11 @@
     "        #           otherwise fallback to serial evaluation:\n",
     "        pool = multiprocessing.Pool() #processes=len(paramslist))\n",
     "        NRPyEnvVars.append(pool.map(master_func,range(len(paramslist))))\n",
-    "        pool.terminate()\n",
+    "        pool.close()\n",
     "        pool.join()\n",
     "except:\n",
     "    # Steps 3.d.ii-iv, alternate: As fallback, evaluate functions in serial.\n",
+    "    NRPyEnvVars = [] # Reset NRPyEnvVars in case multiprocessing wrote to it and failed.\n",
     "    #       This will happen on Android and Windows systems\n",
     "    import BaikalETK_validate.BaikalETK_C_kernels_codegen as BCk\n",
     "    for param in paramslist:\n",
@@ -1038,7 +1039,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting BaikalETK_validate/BaikalETK_ETK_ccl_files_codegen.py\n"
+      "Writing BaikalETK_validate/BaikalETK_ETK_ccl_files_codegen.py\n"
      ]
     }
    ],
@@ -1545,7 +1546,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting BaikalETK_validate/BaikalETK_C_drivers_codegen.py\n"
+      "Writing BaikalETK_validate/BaikalETK_C_drivers_codegen.py\n"
      ]
     }
    ],
@@ -2788,15 +2789,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n"
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      " restricted \\write18 enabled.\r\n",
+      "entering extended mode\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      " restricted \\write18 enabled.\r\n",
+      "entering extended mode\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      " restricted \\write18 enabled.\r\n",
+      "entering extended mode\r\n"
      ]
     }
    ],
