--- a/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Afield_flux.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Afield_flux.ipynb
@@ -101,7 +101,7 @@
     "cmd.mkdir(os.path.join(out_dir,subdir))\n",
     "\n",
     "thismodule = \"Start_to_Finish_UnitTest-GiRaFFE_NRPy-Afield_flux\"\n",
-    "Use_Shock_Data = False\n"
+    "Use_Shock_Data = True\n"
    ]
   },
   {
@@ -147,7 +147,7 @@
     "args[2] = c*x + a*y + b*(z-offset)\n",
     "if Use_Shock_Data:\n",
     "    for i in range(3): \n",
-    "        args[i] += noif.max_noif(0,x)\n",
+    "        args[i] += noif.max_noif(0,5*x)\n",
     "\n",
     "ValenciavU = ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\",\"ValenciavU\")\n",
     "for i in range(3): \n",
@@ -186,7 +186,7 @@
     "BU[2] = sp.exp(sp.Rational(1,10)*(d*x+e*y))\n",
     "if Use_Shock_Data:\n",
     "    for i in range(3): \n",
-    "        BU[i] += max_noif(0,x)\n"
+    "        BU[i] += noif.max_noif(0,5*x)\n"
    ]
   },
   {
@@ -363,9 +363,6 @@
     "\n",
     "AD = ixp.register_gridfunctions_for_single_rank1(\"EVOL\",\"AD\",DIM=3)\n",
     "\n",
-    "Af.calculate_E_i_flux(True,alpha_face,gamma_faceDD,beta_faceU,\\\n",
-    "                      Valenciav_rU,B_rU,Valenciav_lU,B_lU)\n",
-    "\n",
     "Memory_Read = \"\"\"const double alpha_face = auxevol_gfs[IDX4S(ALPHA_FACEGF, i0,i1,i2)];\n",
     "const double gamma_faceDD00 = auxevol_gfs[IDX4S(GAMMA_FACEDD00GF, i0,i1,i2)];\n",
     "const double gamma_faceDD01 = auxevol_gfs[IDX4S(GAMMA_FACEDD01GF, i0,i1,i2)];\n",
@@ -399,6 +396,9 @@
     "indicesp1 = [\"i0+1\",\"i1+1\",\"i2+1\"]\n",
     "\n",
     "for flux_dirn in range(3):\n",
+    "    Af.calculate_E_i_flux(flux_dirn,True,alpha_face,gamma_faceDD,beta_faceU,\\\n",
+    "                          Valenciav_rU,B_rU,Valenciav_lU,B_lU)\n",
+    "\n",
     "    E_field_to_print = [\\\n",
     "                        -sp.Rational(1,4)*Af.E_fluxD[(flux_dirn+1)%3],\\\n",
     "                        -sp.Rational(1,4)*Af.E_fluxD[(flux_dirn+2)%3],\\\n",
@@ -852,28 +852,28 @@
       "\n",
       "Compiling executable...\n",
       "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops Validation/Afield_flux_unit_test.c -o Validation/Afield_flux_unit_test -lm`...\n",
-      "Finished executing in 1.008324384689331 seconds.\n",
+      "Finished executing in 1.0149364471435547 seconds.\n",
       "Finished compilation.\n",
-      "Finished in 1.0146496295928955 seconds.\n",
+      "Finished in 1.0259525775909424 seconds.\n",
       "\n",
       "\n",
       "Now running...\n",
       "\n",
       "Numerical: 1.950138053436466e-01\n",
       "Analytic:  1.950011308136350e-01\n",
-      "Numerical: 1.362648658975720e-03\n",
+      "Numerical: 1.781172160356394e-03\n",
       "Analytic:  1.362031316105586e-03\n",
-      "Numerical: -1.963765353186429e-01\n",
+      "Numerical: -2.008645577931328e-01\n",
       "Analytic:  -1.963631621297406e-01\n",
       "\n",
       "Numerical: 1.950043012242935e-01\n",
       "Analytic:  1.950011308136350e-01\n",
-      "Numerical: 1.362186043617875e-03\n",
+      "Numerical: 1.575001178639817e-03\n",
       "Analytic:  1.362031316105586e-03\n",
-      "Numerical: -1.963665076375021e-01\n",
+      "Numerical: -1.986137199980445e-01\n",
       "Analytic:  -1.963631621297406e-01\n",
       "\n",
-      "Finished in 3.1695685386657715 seconds.\n",
+      "Finished in 0.26262760162353516 seconds.\n",
       "\n",
       "\n"
      ]
@@ -920,8 +920,8 @@
      "text": [
       "The following quantities converge at the listed order (should be ~1 for Shock data, ~2 otherwise):\n",
       "A_rhsD0: 1.999190623480292\n",
-      "A_rhsD1: 1.996342232916631\n",
-      "A_rhsD2: 1.9990464277899764\n"
+      "A_rhsD1: 0.9767858269857116\n",
+      "A_rhsD2: 1.0000897191830145\n"
      ]
     }
    ],
